# i3kill

./: README.md  i3kill.cabal  i3kill.py  i3utils.cabal
lib/: Lib.hs
python/: i3focus.py  i3movetab.py
src/: Main.hs
src/i3focus/: Main.hs
src/i3kill/: Main.hs
src/i3movetab/: Main.hs
