name:                i3kill
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/akazukin/i3kill#readme
license:             GPL-3
license-file:        LICENSE
author:              Tsui Yik Ching
maintainer:          tsuiyikching@protonmail.com
copyright:           2021 Tsui Yik Ching
category:            Desktop
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable i3kill
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5,
                       process >= 1.6.13,
                       aeson >= 1.5.6.0,
                       utf8-string >= 1.0.2,
                       lens == 4.19.*,
                       lens-aeson == 1.1.*,
                       vector >= 0.12.3.1,
                       extra >= 1.7.9
